Fix table text align

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -367,7 +367,7 @@ nav.navbar {
 
     .save-btn {
         @include btn($primary, 25px, $bg: true);
-        width: 150px;
+        width: 170px;
         height: 40px;
         line-height: 20px;
         padding: 0;
